2011-09-15  Jan Hubicka  <jh@suse.cz>

	* ipa-inline-analysis.c (add_condition): Add conditions parameter;
	simplify obviously true clauses.
	(and_predicates, or_predicates): Add conditions parameter.
	(inline_duplication_hoook): Update.
	(mark_modified): New function.
	(unmodified_parm): New function.
	(eliminated_by_inlining_prob, (set_cond_stmt_execution_predicate,
	set_switch_stmt_execution_predicate, will_be_nonconstant_predicate):
	Use unmodified_parm.
	(estimate_function_body_sizes): Update.
	(remap_predicate): Update.

2011-09-15  Ira Rosen  <ira.rosen@linaro.org>

	* tree-vect-data-refs.c (vect_analyze_data_ref_dependence): Allow
	read-after-read dependencies in basic block SLP.

2011-09-14  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/sparc/sparc.md: Use match_test rather than eq/ne symbol_ref
	throughout file.

2011-09-14  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/sh/sh.md: Use match_test rather than eq/ne symbol_ref
	throughout file.

2011-09-14  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/s390/s390.md: Use match_test rather than eq/ne symbol_ref
	throughout file.

2011-09-14  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/rs6000/rs6000.md: Use match_test rather than eq/ne symbol_ref
	throughout file.
	* config/rs6000/constraints.md: Likewise.

2011-09-14  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/microblaze/microblaze.md: Use match_test rather than
	eq/ne symbol_ref throughout file.

2011-09-14  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/bfin/bfin.md: Use match_test rather than eq/ne symbol_ref
	throughout file.

2011-09-14  Tom de Vries  <tom@codesourcery.com>

	PR middle-end/50251
	* explow.c (emit_stack_restore): Set crtl->need_drap if
	stack_restore is emitted.

2011-09-14  Julian Brown  <julian@codesourcery.com>

	* config/arm/arm.c (arm_override_options): Add unaligned_access
	support.
	(arm_file_start): Emit attribute for unaligned access as
	appropriate.