@@ -1,3 +1,8 @@
+2011-09-15  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50361
+	* g++.dg/cpp0x/nullptr23.C: New.
+
 2011-09-15  Ira Rosen  <ira.rosen@linaro.org>
 
 	* gcc.dg/vect/bb-slp-25.c: New.
