@@ -1,3 +1,8 @@
+2011-09-15  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50361
+	* expr.c (count_type_elements): Handle NULLPTR_TYPE.
+
 2011-09-15  Jan Hubicka  <jh@suse.cz>
 
 	* ipa-inline-analysis.c (add_condition): Add conditions parameter;
